# journal-c99

./: '  .clang-format  .gitignore  CMakeLists.txt  README.org  ]  notes.org
graph/: gen_graph.c  gen_graph.h  main.c  script
include/: utils.h
src/: grid_layout.c  main.c  utils.c
